# pr_agent

./: .env.example  .gitignore  README.md  agents.py  github_utils.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
ai_pr_reviewer/: agents.py  cli.py  github_utils.py
ai_pr_reviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
